Fixed padding on smaller devices

--- a/styles/a-propos.css
+++ b/styles/a-propos.css
@@ -43,6 +43,10 @@ p {
 
 /* RESPONSIVE */
 @media screen and (max-width: 900px) {
+  section#a-propos {
+    padding: 1rem;
+  }
+
   .skills {
     grid-template-columns: repeat(2, 1fr);
   }
